Adjust Tests